--- a/public/billing__new.html
+++ b/public/billing__new.html
@@ -337,7 +337,7 @@
                                                           </div>
                                                         </div>
                                                         <div style="padding-top: 1rem; padding-bottom: 1rem;" class="item">
-                                                                <i class="check circle outline icon"></i>
+                                                                <i style="color: #1f7a8c;"  class="large check circle outline icon"></i>
                                                               <div class="content">
                                                                 <a class="header list-text">Tags/Keywords</a>
                                                               </div>
