listing title check modal etc

--- a/public/listing.form.html
+++ b/public/listing.form.html
@@ -30,6 +30,8 @@
 />
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/form.pages.css" />
+    <link rel="stylesheet" type="text/css" href="./css/search.listings.css" />
+
 </head>
 
 <body>
@@ -70,6 +72,9 @@
                                           </ul>
                               </div>
                       </div>
+                    <div id="exists-modal" class="ui modal">
+
+                    </div>
                       <div class="three wide column">
                       </div>
                       <div class="ten wide column">
@@ -128,6 +133,7 @@
                                     </div>
                                     <div id="submit1" class="submit-button" style="width: 100%; margin-left: 0rem;">Next <i class="right arrow icon"></i></div>
                                 </div>
+                                
                                 </form>
                                 <form id="form-2" class="ui equal width form">
                                     <p style="margin-top: 1rem; margin-bottom: 1.5rem;" class="form-h1">Address & Hours</p>
