--- a/public/listing.html
+++ b/public/listing.html
@@ -124,7 +124,7 @@
         <!-- RAIL  -->
         <div class="two wide column"></div>
         <div id="listing-column" class="ten wide segment column">
-          <div class="ui right very close rail">
+          <div id="right-rail" class="ui right very close rail">
               
             <div class="ui raised segment">
               <div id="contact-list" class="ui middle aligned divided list">
