all list business zoho integrated

--- a/public/listing.form.html
+++ b/public/listing.form.html
@@ -73,8 +73,11 @@
                                           </ul>
                               </div>
                       </div>
-                    <div id="exists-modal" class="ui modal">
-
+                    <div id="exists-modal" style="padding: 2.5rem;" class="ui modal">
+                            <p class="form-h1" style="color: black;" >We might already have your business listed</p>
+                        <p id="labels-1" style="text-align: center;" >Click "Claim Your Business" button if your business is already listed here</p>
+                        <p id="labels-1" style="text-align: center;" >Click the title to see the expanded view</p>
+                        <div id="exists-results"></div>
                     </div>
                       <div class="three wide column">
                       </div>
