recent listings + admin.listing.html

--- a/public/admin.portal.html
+++ b/public/admin.portal.html
@@ -26,6 +26,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400|Raleway:100,400,500,700,800,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap"
       rel="stylesheet"
     />
@@ -34,6 +38,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
     />
     <link rel="stylesheet" type="text/css" href="./css/dashboard.css" />
+    <link rel="stylesheet" type="text/css" href="./css/search.listings.css" />
     <link rel="stylesheet" type="text/css" href="./css/admin.portal.css" />
   </head>
   <body>
