more efficient hours + admin hours

--- a/public/admin.listing.html
+++ b/public/admin.listing.html
@@ -471,11 +471,17 @@
                                             </div>
                                         </div>
                             </div>
-                                
-                            <!-- <div id="hours-div">
-                                <div id='opening-hours-field' style="display: inline-block; width: 50%;" class="fields"></div>
-                                <div id='closing-hours-field' style="display: inline-block; width: 50%; " class="fields"></div>
-                            </div> -->
+                            <div class="field">
+                                <label for="full_address" id="labels-1">Full Address</label>
+                                <div id="full_address-div" style="margin-top: 1rem;" class="ui  left icon input">
+                                    <input name="full_address" type="text" id="full_address" class="main">
+                                    <i class="hashtag icon"></i>
+                                </div >
+                            </div>   
+                            <div id="hours-div">
+                                <!-- <div id='opening-hours-field' style="display: inline-block; width: 50%;" class="fields"></div>
+                                <div id='closing-hours-field' style="display: inline-block; width: 50%; " class="fields"></div> -->
+                            </div>
                             <!-- <div class="field">
                                 <div class="ui toggle checkbox">
                                     <input type="checkbox" tabindex="0" name="24hours" class="hidden">
