admin verify claim, verify pending, make inactive, view inactive

--- a/public/admin.listing.html
+++ b/public/admin.listing.html
@@ -606,6 +606,13 @@
                 <div id="user-segment" class="ui raised segment">
                     <p class="logo-header" style="font-size: 25px; color: #696969;">User Info</p>
                 </div>
+                <div class="bottom attached raised segment">
+                    <div class="ui fluid buttons">
+                      <button class="ui positive button activate">Activate</button>
+                        <div class="or"></div>
+                      <button class="ui red button cancel">Cancel</button>
+                    </div>
+                </div>
                 <div id="subscription-segment" class="ui raised segment">
                     <p class="logo-header" style="font-size: 25px; color: #696969;">Subscription Info</p>
                 </div>
