--- a/public/index.html
+++ b/public/index.html
@@ -118,30 +118,30 @@
           </div>
         </div>
         <!-- stock magazine image  -->
-        <div class="eight wide middle aligned computer only column">
-          <div style="margin-bottom: 5rem;" class="landing-images ui centered grid">
+        <div class="eight wide right aligned middle aligned computer only column">
+          <div style="margin-bottom: 5rem; margin-top: 1rem; " class="landing-images ui centered grid">
             <div class="sixteen wide column" >
               <img
                 id="magazine"
-                style="margin: 2rem;margin-bottom: 3.5rem; height: 50vh; width: auto;"
+                style="margin: 2rem;margin-bottom: 3.5rem; height: 50vh; width: auto; margin-right: 0px;"
                 class="ui large centered image"
-                src="./images/doctor.image2.jpg"
+                src="https://ha-images-02.s3-us-west-1.amazonaws.com/salong_home.jpg"
               />
             </div>
             <div class="sixteen wide column" >
               <img
                 id="magazine"
-                style="margin: 2rem;margin-bottom: 3.5rem; height: 50vh;width: auto;"
+                style="margin: 2rem;margin-bottom: 3.5rem; height: 50vh;width: auto; margin-right: 0px;"
                 class="ui centered image"
-                src="./images/doctor.girl.image.2.jpg"
+                src="https://ha-images-02.s3-us-west-1.amazonaws.com/doctor_home.jpg"
               />
             </div>
             <div class="sixteen wide column" >
               <img
                 id="magazine"
-                style="margin: 2rem;margin-bottom: 3.5rem; height: 50vh;width: auto;"
+                style="margin: 2rem;margin-bottom: 3.5rem; height: 50vh;width: auto; margin-right: 0px;"
                 class="ui centered image"
-                src="./images/happy.patient.3.webp"
+                src="https://ha-images-02.s3-us-west-1.amazonaws.com/surgeon_home.jpg"
               />
             </div>
           </div>
@@ -150,7 +150,7 @@
         <!-- search title, subtext, bar, and cta for professionals  -->
         <div
           id="search-column"
-          class="eight wide computer sixteen wide mobile left aligned column"
+          class="seven wide computer sixteen wide mobile center aligned middle aligned column"
         >
           <!-- title  -->
           <p id="search-title">
@@ -165,7 +165,7 @@
             id="search-appendButtons"
             class="ui big search"
           >
-            <div class="ui right action left icon input search">
+            <div class="ui right action left icon input fluid search">
               <i id="search-icon" class="search icon"></i>
               <input
                 id="search-semantic"
@@ -174,7 +174,7 @@
                 placeholder="Ex. Hair Restoration, Hair Transplant, Laser Therapy"
               />
         
-              <div style="margin-left: 8rem;" class="results"></div>
+              <div class="results"></div>
               <button
               id="search-button"
               style="background: white; color: #696969;"
@@ -185,11 +185,12 @@
             </div>
            
             <!-- CTA  -->
-            <p style="display: block;" id="landing-list-p">
+            <p style="display: block; color: black; text-align: center;" id="landing-list-p">
               Are you a business owner?
               <a
-                style="text-decoration: underline; color: #001021;"
+                style="text-decoration: underline; color: #ff6600;"
                 id="landing-list-a"
+                href="http://localhost:3000/billing__new.html"
                 >List your business</a
               >
             </p>
@@ -198,7 +199,7 @@
       </div>
       <div id="problems-section" class="row">
         <div style="margin-bottom: 5rem;" class="sixteen wide center aligned column">
-          <p id="problems-title">There Are So Many Solutions</p>
+          <p id="problems-title">Shortcuts to Special Skills</p>
           <p id="problems-text">
               In this directory, we have pooled together the best qualified professionals from multiple specialties who are located in your area. You are just a click away from finding a permanent solution to your hair-loss problem.
           </p>
@@ -242,9 +243,9 @@
                   </div>
                   <div class="sixteen wide middle aligned column">
                       <p id="ishrs-truncate" class="logo-text truncate">
-                          The International Society of Hair Restoration Surgery (ISHRS) – Look for this symbol if you are considering hair transplant surgery. ISHRS is a global non-profit medical association and a leading authority on hair loss treatment and restoration. With more than 1,100 members throughout 70 countries, ISHRS is dedicated to achieving excellence in patient outcomes by promoting the highest standards of medical practice, medical ethics, and research in the medical hair restoration industry.
-                      </p>
-                      <i id="ishrs-expand" style="position: absolute; right: .5rem;" class="expand arrows alternate icon helpicon" ></i>
+                      The International Society of Hair Restoration Surgery (ISHRS) – Look for this symbol if you are considering hair transplant surgery. ISHRS is a global non-profit medical association and a leading authority on hair loss treatment and restoration. With more than 1,100 members throughout 70 countries, ISHRS is dedicated to achieving excellence in patient outcomes by promoting the highest standards of medical practice, medical ethics, and research in the medical hair restoration industry.  
+                      <p id="ishrs-expand" class="helpicon" >Read More</p>
+                    </p>
                       <span id="ishrs-hide" style="display: none;" class="hide" >HIDE</span>
                   </div>
                 </div>
@@ -259,8 +260,8 @@
                     <div class="sixteen wide column">
                         <p id="artas-truncate" class="logo-text truncate">
                             ARTAS Robotic Hair Restoration System – Leading hair restoration physicians and researchers developed the ARTAS Robotic Hair Restoration System to eliminate the fatigue, linear scarring and human error sometimes associated with other procedures. This symbol identifies doctors and clinics that offer ARTAD robot-assisted hair transplant surgery (FUE). For your security, only company trained and approved facilities are listed.
+                            <p id="artas-expand" class="helpicon" >Read More</p>
                         </p>
-                        <i id="artas-expand" style="position: absolute; right: .5rem;" class="expand arrows alternate icon helpicon" ></i>
                         <span id="artas-hide" style="display: none;" class="hide" >HIDE</span>
                     </div>
                   </div>
@@ -275,8 +276,8 @@
                     <div class="sixteen wide column">
                         <p id="wts-truncate" class="logo-text truncate">
                             The World Trichology Society – WTS is an organization that promotes the science of trichology. Trichology is the para-medical science of the hair , hair loss and associated scalp problems. It is the “bridge between cosmetology and dermatology.” Certified WTS Trichologists have successfully completed a rigorous course covering medical and cosmetic hair loss solutions.
-                        </p>
-                        <i id="wts-expand" style="position: absolute; right: .5rem;" class="expand arrows alternate icon helpicon" ></i>
+                            <p id="wts-expand" class="helpicon" >Read More</p>
+                          </p>
                         <span id="wts-hide" style="display: none;" class="hide" >HIDE</span>
                     </div>
                   </div>
@@ -291,8 +292,8 @@
                     <div class="sixteen wide column">
                         <p id="club-truncate" class="logo-text truncate">
                             Hair Club – With 120 locations across the U.S., Canada and Puerto Rico and over 1,100 licensed cosmetologists, Hair Club is the largest network of hair addition and hair management salons. Hair Club states, “We’re a family of hair loss experts whose mission is to help people suffering from hair loss live their lives to the fullest.”
-                        </p>
-                        <i id="club-expand" style="position: absolute; right: .5rem;" class="expand arrows alternate icon helpicon" ></i>
+                            <p id="club-expand" class="helpicon" >Read More</p>
+                          </p>
                         <span id="club-hide" style="display: none;" class="hide" >HIDE</span>
                     </div>
                   </div>
@@ -303,7 +304,7 @@
         class="ui grid container"
       >
         <div id="step-1" class="row">
-          <div id="step-1-col-l" class="six wide computer sixteen wide mobile middle aligned column">
+          <div id="step-1-col-l" class="nine wide computer sixteen wide mobile middle aligned column">
             <p id="step-1-title">Why?</p>
             <div id="step-1-list" class="ui list step-list">
               <div style="margin-bottom: 2.5rem;" class="item">
@@ -311,54 +312,31 @@
                 <div class="content step-list-content">
                   <p id="step-1-content">
                       Hair Authority Directory™ was created to give men and women suffering from hair loss an information tool they can use with confidence to find the best qualified professionals and products. It is the most comprehensive, unbiased and user-friendly directory on the internet. It is managed by a team of hair loss professionals with over forty years of experience.
-                    <!-- Just type in the
-                    <strong
-                      style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
-                      >Title</strong
-                    >,
-                    <strong
-                      style="font-size: 35px; font-weight: 700; color: #1F7A8C;"
-                      >Name</strong
-                    >, or
-                    <strong
-                      style="font-size: 35px; font-weight: 700; color: #1F7A8C;"
-                      >Category</strong
-                    >
-                    and instantly search our directory of thousands of verified
-                    solutions. -->
                   </p>
-                  <!-- <div
-                    id="step1-search"
-                    style="padding: 1rem; "
-                    class="box-button"
-                  >
-                    <span>Start Seaching <i class="sistrix icon"></i></span>
-                  </div> -->
                 </div>
               </div>
             </div>
           </div>
           <div
             id="step-1-col-b"
-            class="ten wide computer sixteen wide mobile  middle aligned centered column"
+            class="seven wide computer sixteen wide mobile left aligned column"
           >
             <img
               id="step-1-gif-img"
               src="./images/tricho.png"
-              class="ui huge image"
+              class="ui huge centered image"
               alt="Image"
             />
           </div>
         </div>
         <div id="step-2" class="row">
-          <div id="step-2-col-b" class="seven wide computer sixteen wide mobile middle aligned column">
-            <img id="step-2-img" src="./images/find.results.webp" />
+          <div id="step-2-col-b" class="seven wide computer sixteen wide mobile right aligned column">
+            <img class="ui huge centered image" id="step-2-img" src="./images/find.results.webp" />
           </div>
           <div
             id="step-2-col-l"
             class="nine wide computer sixteen wide mobile middle aligned centered column"
           >
-            <!-- <p id="step-2-num" class="title_l_blue">2.</p> -->
             <p id="step-2-title">Trustworthy</p>
             <div id="step-2-list" class="ui list step-list">
               <div style="margin-bottom: 2.5rem;" class="item">
@@ -366,27 +344,6 @@
                 <div class="content step-list-content">
                   <p id="step-2-content">
                       This one-of-a-kind directory is 100% objective. It is not affiliated with any commercial or special interest group. It does not accept advertising and it does not promote or endorse any product or service. It allows you to compare alternate suppliers and make a rational decision about what is best for you. This is the only directory you will ever need.
-                    <!-- Immediately find thousands of the
-                    <strong
-                      style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
-                    >
-                      Most Trusted Specialists and Brands</strong
-                    >
-                    from the most objective, comprehensive, and trusted
-                    directory.
-                  </p>
-                </div>
-              </div>
-              <div style="margin-bottom: 2.5rem;" class="item">
-                <i style="color: #696969;" class="big bookmark icon"></i>
-                <div class="content step-list-content">
-                  <p id="step-2-content">
-                    Even save your
-                    <strong
-                      style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
-                      >Top Specialists</strong
-                    >
-                    for later. -->
                   </p>
                 </div>
               </div>
@@ -403,21 +360,6 @@
                   <div class="content step-list-content">
                     <p id="step-3-content">
                         Unlike other special-interest groups and deep-pocket advertisers, the Hair Authority Directory is not beholden to any interest or commercial group. It lists every professional, flags special skills, professional affiliations, specialized training, and awards so you can find the best of the best.
-                      <!-- Let any of our
-                      <strong
-                        style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
-                        >Verified</strong
-                      >
-                      professionals give you back your
-                      <strong
-                        style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
-                        >Hair</strong
-                      >
-                      and your
-                      <strong
-                        style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
-                        >Confidence.</strong
-                      > -->
                     </p>
                   </div>
                 </div>
@@ -428,7 +370,7 @@
             <img
               class="ui huge centered image"
               id="step-3-img"
-              src="https://i.ya-webdesign.com/images/happy-couple-png-4.png"
+              src="https://image.shutterstock.com/image-photo/female-patient-doctor-have-consultation-600w-317585807.jpg"
             />
           </div>
         </div>
@@ -487,17 +429,17 @@
                   Because it is the most trusted information source. There are no ads, no distractions; just <strong class="rale-strong" >You</strong> and the people who want to get to know you.
               </p>
               <p class="cta-header" >
-                  Be Seen By Thousands.
-                </p>
-                <p class="cta-text">
-                    The Hair Authority Directory is the best place to be seen by <strong class="rale-strong">Thousands</strong> of people looking for the solution you have!
-                </p>
-                <div class="bus-box-button listBusClick">
-                  List Your Business
-                </div>
+                Be Seen By Thousands.
+              </p>
+              <p class="cta-text">
+                  The Hair Authority Directory is the best place to be seen by <strong class="rale-strong">Thousands</strong> of people looking for the solution you have!
+              </p>
+              <div class="bus-box-button listBusClick">
+                List Your Business
+              </div>
         </div>
         <div class="eight wide computer only column">
-          <img class="ui big centered image" src="https://pluspng.com/img-png/mac-computer-screen-png-apple-mac-computer-screen-png-1122.png" >
+          <img class="ui big centered image" src="./images/dashboard_mac_1.png" >
         </div>
       </div>
       <div class="row" id="footer-row">
