--- a/public/index.html
+++ b/public/index.html
@@ -94,17 +94,17 @@
               >
             </div>
             <div class="two wide computer three wide mobile left aligned column">
-              <a class="page-links" href="" id="about">
+              <a class="page-links" id="about">
                 <i class="info icon"></i> About</a
               >
             </div>
             <div class="two wide computer three wide mobile left aligned column">
-              <a class="page-links" href="" id="news">
+              <a class="page-links" href="https://hairauthority.com/" id="news">
                 <i class="newspaper icon"></i> News</a
               >
             </div>
             <div class="two wide computer three wide mobile left aligned column">
-              <a class="page-links" href="" id="store">
+              <a class="page-links" href="https://hairauthoritystore.com/" id="store">
                 <i class="store icon"></i> Store</a
               >
             </div>
