--- a/public/listing.html
+++ b/public/listing.html
@@ -180,11 +180,11 @@
           </div>
           <div id="services-section"></div>
           <div id="about-section">
-            <hr
+            <!-- <hr
               id="about-hr"
               style="height: .25rem; background: black; color: black;"
-            />
-            <p id="section-header">Description</p>
+            /> -->
+            <p id="section-header"></p>
           </div>
           <div
             id="youtube-section"
