dashboard rich text images

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -560,10 +560,12 @@
                     <div class="description" id="editor">
                         
                     </div>
+                    <input type="file" style="display: none;" id="ql-file-input"/>
                     <!-- <div id="about-div" style="margin-top: 1rem;" class="ui left icon input">
                         <textarea class="main input_text" id="business_description" name="about" type="text" ></textarea>
                     </div> -->
                 </div>
+                <button style="display: none;" id="description-submit-button" class="ui button submit-button" >Update Description</button>
                 <div class="field">
                     <label style="margin-top: 2rem;" id="labels-1">Mission Statement</label>
                     <div id="ms-div" style="margin-top: 1rem;" class="ui left icon input">
@@ -601,7 +603,7 @@
                         <button style="display: none;" class="ui button faqSubmit" id="faq2-button">Update</button>
                     </div>
                 </div>
-                <div style="display: none;" id="submit-button" class="ui button">Update Listing</div>
+                <div style="display: none;" id="submit-button" class="ui button submit-button">Update Listing</div>
             <div id="image-size-modal" class="ui basic modal">
                     <div class="ui icon header">
                       <i class="image outline icon"></i>
